2007-12-25  Richard Stallman  <rms@gnu.org>

	* simple.el (select-active-regions): New option.
	(set-mark): Obey it.
	(yank-pop-change-selection): New option.
	(current-kill): Obey it.

2007-12-25  David Golden  <david.delaharpe.golden@gmail.com>  (tiny change)

	* term/x-win.el (x-select-enable-primary): New option.
	(x-select-text, x-cut-buffer-or-selection-value): Obey it.

	* mouse.el (mouse-yank-primary): New function (almost same
	as mouse-yank-secondary).

2007-12-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* calculator.el:
	* dframe.el:
	* iswitchb.el:
	* whitespace.el:
	* winner.el:
	* emacs-lisp/checkdoc.el:
	* mail/feedmail.el:
	* net/quickurl.el:
	* obsolete/fast-lock.el:
	* play/5x5.el:
	* progmodes/delphi.el:
	* progmodes/idlw-shell.el:
	* progmodes/idlwave.el:
	* textmodes/artist.el:
	* textmodes/ispell.el:
	* textmodes/texinfmt.el:
	* textmodes/texinfo.el: Remove obsolete definitions of backward
	compatibility macros for defcustom, defgroup, defface, when,
	unless, with-current-buffer and with-temp-message.

2007-12-24  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/verilog-mode.el: Fit parts to 80 columns.

2007-12-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-save-buffers-kill-terminal): Check the `proc' is
	indeed a process.

2007-12-23  Richard Stallman  <rms@gnu.org>

	* simple.el (region-active-p): New function.
	(use-empty-active-region): New variable.

	* dired-aux.el (dired): Load dired.el at run time too.

2007-12-23  Juri Linkov  <juri@jurta.org>

	* man.el (Man-follow-manual-reference): Fill the minibuffer's
	default list with a full list of references.

	* files.el (auto-mode-alist): Add \\' to doc-view files regexp.

2007-12-23  Andreas Schwab  <schwab@suse.de>

	* files.el (switch-to-buffer-other-frame): Return the buffer
	switched to.

2007-12-23  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.1.12.

	* net/tramp.el: New todo item.
